30_applications/mapper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mapper
  labels:
    gateway.networking.k8s.io/public-routes: "true"
